# internal/routes/routes.go
@@ -18,16 +18,19 @@ func Register(r *gin.Engine, DB *sql.DB) {
 	repoProduct := repository.NewProductRepo(DB)
 	repoCategory := repository.NewCategoryRepo(DB)
 	repoTransaction := repository.NewTransactionRepo(DB)
+	repoReport := repository.NewReportRepo(DB)
 
 	// Initialize services
 	serviceProduct := service.NewProductService(repoProduct)
 	serviceCategory := service.NewCategoryService(repoCategory)
 	serviceTransaction := service.NewTransactionService(repoTransaction)
+	serviceReport := service.NewReportService(repoReport)
 
 	// Initialize handlers
 	handlerProduct := handler.NewProductHandler(serviceProduct)
 	handlerCategory := handler.NewCategoryHandler(serviceCategory)
 	handlerTransaction := handler.NewTransactionHandler(serviceTransaction)
+	handlerReport := handler.NewReportHandler(serviceReport)
 
 	// Setup routes
 	setupSwaggerRoutes(r)
@@ -35,6 +38,7 @@ func Register(r *gin.Engine, DB *sql.DB) {
 	setupProductRoutes(r, handlerProduct)
 	setupCategoryRoutes(r, handlerCategory)
 	setupTransactionRoutes(r, handlerTransaction)
+	setupReportRoutes(r, handlerReport)
 }
 
 func setupSwaggerRoutes(r *gin.Engine) {
@@ -76,5 +80,12 @@ func setupTransactionRoutes(r *gin.Engine, h *handler.TransactionHandler) {
 	transaction := r.Group("/transaction")
 	{
 		transaction.POST("/checkout", h.Checkout)
+	}
+}
+
+func setupReportRoutes(r *gin.Engine, h *handler.ReportHandler) {
+	report := r.Group("/report")
+	{
+		report.GET("", h.Report)
 	}
 }
